# Crowdmind-training

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: train.yaml
runs/: .gitkeep
scripts/: test_api_integration.py  train_and_upload.py
src/crowdmind_ml/: __init__.py
src/crowdmind_ml/api/: __init__.py  client.py
src/crowdmind_ml/artifacts/: __init__.py  hasher.py  metadata.py  run_manager.py
src/crowdmind_ml/cli/: __init__.py  config.py  pipeline.py
src/crowdmind_ml/data/: __init__.py  loader.py  splitter.py  validator.py
src/crowdmind_ml/features/: __init__.py  preprocessor.py
src/crowdmind_ml/model/: __init__.py  builder.py  trainer.py
src/crowdmind_ml/tflite/: __init__.py  quantizer.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  dataset.csv  schema.json
tests/smoke/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_artifacts.py  test_data.py  test_features.py  test_model.py
